Bug 159704 - FILESAVE exporting to SVG loses the text in some shapes
Summary: FILESAVE exporting to SVG loses the text in some shapes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Jaume Pujantell
URL:
Whiteboard: target:24.8.0 target:24.2.2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-13 11:18 UTC by Jaume Pujantell
Modified: 2024-02-19 14:08 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
File with text inside image. (13.27 KB, application/vnd.oasis.opendocument.presentation)
2024-02-13 11:19 UTC, Jaume Pujantell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jaume Pujantell 2024-02-13 11:18:10 UTC
Description:
If an image has text added, when it is exported to SVG format the text is lost.

Steps to Reproduce:
1.Open the file
2.Export
3.Select SVG format

Actual Results:
The resulting svg file does not contain the text inside the image.

Expected Results:
The resulting file should look like the original presentation.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: de1d9d8302e600e6cc3964f55790d954fd493df9
CPU threads: 16; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Jaume Pujantell 2024-02-13 11:19:27 UTC
Created attachment 192536 [details]
File with text inside image.
Comment 2 Commit Notification 2024-02-14 13:51:59 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6565e46f3e49173c4c37f8b51450f5352ac08341

tdf#159704 svx: preserve text when getting grpahic from sdrobject

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-02-15 11:33:05 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/0655736b20fd84e6948d21c31fe388dc83801ad3

tdf#159704 svx: preserve text when getting grpahic from sdrobject

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.